@@ -1,3 +1,14 @@
+2008-09-14 Jens Tkotz <jens@peino.de> 1.5.9-svn-b27
+
+ * Fix: Add photos from mainpage is new, but was not working ;-)
+        Added missing javascript.
+
+2008-09-14 Jens Tkotz <jens@peino.de> 1.5.9-svn-b26
+
+ * Fix: Typo
+
+ * Change: Code nicify.
+
 2008-09-13 Jens Tkotz <jens@peino.de> 1.5.9-svn-b25
 
  * Fix: Better handling the case when an invalid, or borken image
